gccida/g1/gen_reload
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7813:46: error: must use 'enum' tag to refer to type 'reload_type'
rtx  gen_reload( rtx out, rtx in, int opnum, reload_type type) 
                                             ^
                                             enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7816:4: error: expected ';' after expression
rtx last_insn; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7816:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7824:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7824:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7828:4: error: expected ';' after expression
rtx v19; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7828:5: error: use of undeclared identifier 'v19'
rtx v19; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7831:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7831:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7835:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7835:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7837:4: error: expected ';' after expression
rtx v28; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7837:5: error: use of undeclared identifier 'v28'
rtx v28; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7838:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code insn_code; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7842:4: error: expected ';' after expression
rtx secondary_mem; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7842:5: error: use of undeclared identifier 'secondary_mem'; did you mean 'get_secondary_mem'?
rtx secondary_mem; // r13 
    ^~~~~~~~~~~~~
    get_secondary_mem
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload.h:260:12: note: 'get_secondary_mem' declared here
extern rtx get_secondary_mem PARAMS ((rtx, enum machine_mode,
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7848:1: error: use of undeclared identifier 'last_insn'
last_insn = get_last_insn( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7854:29: error: use of undeclared identifier 'machine_mode'
v13 = gen_lowpart_common( ( machine_mode)v9, out); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/reload1.c:7885:6: error: use of undeclared identifier 'last_insn'
if ( last_insn ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_reload/src/obj/reload1.o] Error 1
